kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: id
  template:
    metadata:
      labels:
        app: id
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: [ "start-dev" ]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          volumeMounts:
            - name: id-volume
              subPath: account
              mountPath: /opt/keycloak/themes/custom/account/account.ftl
            - name: id-volume
              subPath: properties
              mountPath: /opt/keycloak/themes/custom/account/theme.properties
            - name: id-volume
              subPath: login
              mountPath: /opt/keycloak/themes/custom/login/login.ftl
      volumes:
        - name: id-volume
          configMap:
            name: id-config
---

kind: Service
apiVersion: v1
metadata:
  name: id
spec:
  selector:
    app: id
  ports:
    - port: 8080
  type: NodePort
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: id
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - id.med-united.health
      secretName: id-tls
  rules:
    - host: id.med-united.health
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: id
                port:
                  number: 8080
